# tree-sitter-polar

./: .gitignore  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  complex.polar  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  scratch.polar  setup.py  test-formatter.polar  test.polar  topiary-polar.ncl  tree-sitter.json  watchformat.sh  watchparse.sh
.github/workflows/: check.yml
bindings/c/: tree-sitter-polar.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_polar/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPolar/: polar.h
bindings/swift/TreeSitterPolarTests/: TreeSitterPolarTests.swift
languages/: polar.scm
queries/: formatter.scm  highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: populated-actor.txt  resource-empty.txt  test-block.txt
