[package]
name = "tree-sitter-polar"
description = "A declarative logic programming language specialized for authorization logic."
version = "1.0.0"
authors = ["Aru Sahni <aru@osohq.com>"]
license = "Apache 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "polar"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-polar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
